--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -2,7 +2,9 @@
 title: "Report"
 author: "Jussi Kari"
 date: "5/21/2021"
-output: html_document
+output: 
+  html_document: 
+    self_contained: no
 ---
 
 ```{r setup, include=FALSE}
